--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 <body bgcolor="#87CEFA">
   <nav align="center">
     <ul>
-      <li><a href="index.html">Página Inicial</a></li>
-      <li><a href="/pages/curiosidades.html">Curiosidades</a></li>
-      <li><a href="/pages/fotos.html">Fotos</a></li>
+      <a href="index.html">Página Inicial</a>
+      <br>
+      <a href="pages/curiosidades.html">Curiosidades</a>
+      <br>
+      <a href="pages/fotos.html">Fotos</a>
     </ul>
   </nav>
 
