--- a/pages/curiosidades.html
+++ b/pages/curiosidades.html
@@ -10,9 +10,11 @@
 <body bgcolor="#E0FFFF">
     <nav align="center">
         <ul>
-            <li><a href="../index.html">Página Inicial</a></li>
-            <li><a href="curiosidades.html">Curiosidades</a></li>
-            <li><a href="fotos.html">Fotos</a></li>
+            <a href="../index.html">Página Inicial</a>
+            <br>
+            <a href="curiosidades.html">Curiosidades</a>
+            <br>
+            <a href="fotos.html">Fotos</a>
         </ul>
     </nav>
 
