--- a/pages/fotos.html
+++ b/pages/fotos.html
@@ -8,9 +8,11 @@
 <body bgcolor="#F5DEB3">
     <nav align="center">
         <ul>
-            <li><a href="../index.html">Página Inicial</a></li>
-            <li><a href="curiosidades.html">Curiosidades</a></li>
-            <li><a href="fotos.html">Fotos</a></li>
+            <a href="../index.html">Página Inicial</a>
+            <br>
+            <a href="curiosidades.html">Curiosidades</a>
+            <br>
+            <a href="fotos.html">Fotos</a>
         </ul>
     </nav>
 
